<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EmergencyAssist</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Change Code</string>
    <string name="shake">Enable shake?</string>
    <string name="tvalue">Enter your desired code!</string>
    <string name="ex">Example tx34zv,hqpalwy,4tv5hylp or simple string like lockmydroidnow,lockitnow</string>
    <string name="hint">ex: tx34zv,lockmydroidnow</string>
    <string name="save">save</string>
    <string name="saveit">saveit</string>
    <string name="setting">settings</string>
    <string name="view">view code</string>
    <string name="viewit">viewit</string>
    <string name="change">Do you want to change your code?</string>
    <string name="enter">Enter Your Pin</string>
    <string name="go">Go!</string>
    <string name="changepin">CHANGE PIN</string>
    <string name="pinenter">Enter a Pin</string>
    <string name="pinreenter">Re-Enter your Pin</string>
    <string name="create">Create!</string>
    <string name="alert">Alert!</string>
    <string name="alertWithImage">Alert with Image!</string>
    <string name="editContacts">Add/Edit Emergency Contacts</string>
    <string name="title_activity_emergency_contacts">EmergencyContacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="addContact">Add Contact</string>
        <string name="chooseContact">Choose from Contacts</string>
    <string name="MedInfo">Add/Edit Medical Information</string>        
    <string name="saveContact">Save Contact</string>
    <string name="viewContacts">View Emergency Contacts</string>
    <string name="title_activity_medical_information">MedicalInformation</string>
    <string name="viewMed">View Medical History</string>
    <string name="title_activity_widget_dialog">WidgetDialogActivity</string>
    <string name="title_medical_info">Medical Info</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_parse_rest">ParseRestActivity</string>
    
    <color name="white">#FFFFFF</color>
    

</resources>