<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/tvalue"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/editCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/editCodeText"
        android:layout_marginTop="18dp"
        android:background="@drawable/blu1"
        android:onClick="@string/saveit"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/blu1"
        android:onClick="@string/viewit"
        android:text="@string/view"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/blu1"
        android:fontFamily="sans-serif"
        android:onClick="changemypin"
        android:text="@string/changepin"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/v"
        style="@style/Divider"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button2"
        android:layout_marginTop="16dp"
        android:background="@color/white" />

    <View
        android:id="@+id/v"
        style="@style/Divider"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/v"
        android:background="@color/white" />

    <View
        style="@style/Divider"
        android:layout_above="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>