<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/accessshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text=""
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/contactsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="editContacts"
        android:text="@string/editContacts"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/change"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="editCode"
        android:text="@string/edit"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/view4"
        style="@style/Divider"
        android:background="@color/white"        
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/view2" />

    <View
        android:id="@+id/view2"
        style="@style/Divider"
        android:background="@color/white"
        android:layout_below="@+id/contactsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="sendIt"
        android:text="@string/alert"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/view1"
        style="@style/Divider"
        android:background="@color/white"        
        android:layout_alignLeft="@+id/view3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/medicalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/contactsButton"
        android:layout_alignTop="@+id/accessshow"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="addOrEditMedical"
        android:text="Add/Edit Medical Information"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/view3"
        style="@style/Divider"
        android:background="@color/white"        
        android:layout_alignLeft="@+id/view2"
        android:layout_below="@+id/medicalButton"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="sendWithImage"
        android:text="@string/alertWithImage"
        android:textColor="#FFFFFF" />

</RelativeLayout>